--- a/package.json
+++ b/package.json
@@ -39,14 +39,16 @@
   "dependencies": {
     "axios": "^1.6.0",
     "bull": "^4.11.5",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "^1.1.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fake-useragent": "^1.0.1",
     "joi": "^17.11.0",
     "mongoose": "^8.0.0",
     "node-cache": "^5.1.2",
-    "playwright": "^1.40.0",
+    "p-queue": "^9.0.0",
+    "p-retry": "^7.1.0",
+    "playwright": "^1.56.1",
     "playwright-extra": "^4.3.6",
     "proxy-agent": "^6.3.1",
     "puppeteer": "^21.6.0",
