price oye successfull by brand scraping

--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "shopwise-scraping",
   "version": "1.0.0",
   "description": "Web scraping service for ShopWise AI - Extract product data from Pakistani e-commerce platforms",
-  "main": "src/index.js",
-  "scripts": {
+  "main": "src/index.js",  "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "worker": "node src/jobs/workers/scraping.worker.js",
@@ -11,6 +10,9 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:scraper": "node scripts/test-scraper.js",
+    "test:reviews": "node tests/test-reviews-and-schema.js",
+    "test:brand": "node tests/test-brand-scraping.js",
+    "test:brand:clean": "node tests/test-brand-scraping.js --clean",
     "validate:config": "node scripts/validate-config.js",
     "update:selectors": "node scripts/update-selectors.js",
     "benchmark": "node scripts/benchmark-scraper.js",
