category mapping and brand mapping fixed

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,13 @@ BACKEND_API_URL=http://localhost:5000/api/v1
 BACKEND_API_TIMEOUT=10000
 
 # ============================================
+# CATEGORY AUTO-CREATION
+# ============================================
+# ID of "Unmapped Products" parent category
+# Run: node scripts/create-unmapped-category.js in backend to get this ID
+UNMAPPED_CATEGORY_ID=
+
+# ============================================
 # BROWSER CONFIGURATION
 # ============================================
 BROWSER_HEADLESS=true
