Add production seeders adn github actions workflows

--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,16 @@ LOG_LEVEL=info
 # ============================================
 # DATABASE (SHARED WITH BACKEND)
 # ============================================
+# Local development:
 MONGODB_URI=mongodb://localhost:27017/shopwise
 MONGODB_TEST_URI=mongodb://localhost:27017/shopwise_test
 MONGODB_POOL_SIZE=10
+
+# Production (MongoDB Atlas):
+# Use the full connection string with database name 'shopwise' at the end
+# Example: mongodb+srv://username:password@cluster.mongodb.net/shopwise
+# This ensures all services (scraping, backend) use the same database
+# MONGODB_URI=mongodb+srv://YOUR_USERNAME:YOUR_PASSWORD@YOUR_CLUSTER.mongodb.net/shopwise
 
 # ============================================
 # REDIS (FOR QUEUES & CACHING)
@@ -31,8 +38,12 @@ BACKEND_API_TIMEOUT=10000
 # CATEGORY AUTO-CREATION
 # ============================================
 # ID of "Unmapped Products" parent category
-# Run: node scripts/create-unmapped-category.js in backend to get this ID
+# Run: npm run seed:production to get these IDs
 UNMAPPED_CATEGORY_ID=
+
+# PriceOye Platform ID (for category mappings)
+# Also populated by: npm run seed:production
+PRICEOYE_PLATFORM_ID=
 
 # ============================================
 # BROWSER CONFIGURATION
