--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "test:scraper": "node scripts/test-scraper.js",
     "test:reviews": "node tests/test-reviews-and-schema.js",
     "test:brand": "node tests/test-brand-scraping.js",
-    "test:brand:clean": "node tests/test-brand-scraping.js --clean",
-    "scrape:priceoye": "node scripts/scrape-priceoye.js",
+    "test:brand:clean": "node tests/test-brand-scraping.js --clean",    "scrape:priceoye": "node scripts/scrape-priceoye.js",
     "scrape:priceoye:dry": "node scripts/scrape-priceoye.js --dry-run",
     "scrape:priceoye:resume": "node scripts/scrape-priceoye.js --resume",
+    "seed:production": "node scripts/seed-production.js",
+    "seed:production:essential": "node scripts/seed-production.js --essential",
+    "seed:production:clear": "node scripts/seed-production.js --clear",
     "validate:config": "node scripts/validate-config.js",
     "update:selectors": "node scripts/update-selectors.js",
     "benchmark": "node scripts/benchmark-scraper.js",
